--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,10 @@
   width: 50%;
   border: 3px solid green;
   padding: 10px;
-	
+
+}
+body{
+ background-image: url(file:///home/ratemo/Downloads/wb.jpg)
 }
 .centerText{
 	text-align: center;
