--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@
 
 }
 body{
- background-image: url(file:///home/ratemo/Downloads/wb.jpg)
+ background-image: url(file:///home/ratemo/Downloads/wb.jpg);
 }
 .centerText{
 	text-align: center;
